# etiquetar_champis

./: Makefile  README.md  docker-compose.yaml
etiquetador/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json
etiquetador/bbdd/: database.py
etiquetador/dataset/data/: 06e48cb6-840e-41ac-9e1f-06469e40e445.json  311e2ee0-627d-482d-a6c7-696d04ffccbc.json  4eb1a6ed-e269-4ba7-a49f-fc766fe8a4ae.json  629e14f9-39c4-47ed-8c33-8da720427e43.json  97900c6f-b573-4bcc-b81d-1784d360335c.json  aac76007-37ae-4564-8979-59655e17cd1b.json  cc081d46-d87d-4ddb-b6cb-7a5a0a680a2c.json  f13338d9-1ca3-48af-b2b5-7e6f8cb97ead.json  fef68b47-b01c-49b4-8bcb-8b0f5868bcbf.json
etiquetador/dataset/labels/: 311e2ee0-627d-482d-a6c7-696d04ffccbc.txt  4eb1a6ed-e269-4ba7-a49f-fc766fe8a4ae.txt  5b16444f-13b2-4101-b345-58bb9329edf5.txt  ab7a0712-d35e-4498-84b9-c4fd9fc02398.txt  fef68b47-b01c-49b4-8bcb-8b0f5868bcbf.txt
etiquetador/entidades/modelos/: champi.py
etiquetador/entidades/schemas/: champi.py
etiquetador/middlewares/: cors.py
etiquetador/routes/: champi.py  download.py  hola.py
etiquetador/services/: champi.py
etiquetador/test/: conftest.py
etiquetador/test/champi/: test_champi.py
etiquetador/utils/: logger.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  ChampiñonMarker.jsx  main.jsx
frontend/src/assets/: logo.jfif
frontend/src/components/: error-boundary.jsx  error-services.jsx  form.jsx  header.jsx  layout.jsx  router.jsx
frontend/src/errors/: 404.jsx  (+1 more)
(+10 files in other folders)
