[project]
name = "etiquetador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "allure-pytest>=2.14.2",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-tornasync>=0.6.0.post2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2"
]
